# ratioCore

./: .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml
include/: atom.h  combinations.h  conjunction.h  constructor.h  core.h  core_defs.h  core_listener.h  defs.h  env.h  field.h  item.h  method.h  parser.h  predicate.h  scope.h  type.h
src/: atom.cpp  conjunction.cpp  constructor.cpp  core.cpp  env.cpp  item.cpp  method.cpp  oRatioCoreConfig.cmake.in  parser.cpp  predicate.cpp  ratioCoreConfig.cmake.in  scope.cpp  type.cpp
tests/: CMakeLists.txt  test_core.cpp
